Adding login register functionality

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "latest",
+    "@google-cloud/storage": "latest",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -37,47 +39,48 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "ai": "latest",
     "autoprefixer": "^10.4.20",
+    "axios": "latest",
+    "bcryptjs": "latest",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "cors": "latest",
+    "crypto": "latest",
     "date-fns": "4.1.0",
+    "dotenv": "latest",
     "embla-carousel-react": "8.5.1",
+    "express": "latest",
+    "express-rate-limit": "latest",
+    "firebase": "^11.5.0",
+    "firebase-admin": "^11.11.1",
+    "helmet": "latest",
+    "http": "latest",
     "input-otp": "1.4.1",
+    "ioredis": "latest",
+    "jsonwebtoken": "latest",
     "lucide-react": "^0.454.0",
+    "mongoose": "latest",
+    "multer": "latest",
     "next": "15.1.0",
+    "next-firebase-auth": "^1.4.0",
     "next-themes": "latest",
+    "nodemailer": "latest",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
+    "socket.io": "latest",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.6",
-    "zod": "^3.24.1",
-    "express": "latest",
-    "cors": "latest",
-    "dotenv": "latest",
-    "mongoose": "latest",
-    "http": "latest",
-    "socket.io": "latest",
-    "ioredis": "latest",
-    "helmet": "latest",
-    "express-rate-limit": "latest",
-    "bcryptjs": "latest",
-    "firebase-admin": "latest",
-    "jsonwebtoken": "latest",
-    "crypto": "latest",
-    "ai": "latest",
-    "@ai-sdk/openai": "latest",
-    "axios": "latest",
-    "@google-cloud/storage": "latest",
     "uuid": "latest",
-    "nodemailer": "latest",
-    "multer": "latest"
+    "vaul": "^0.9.6",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22",
